--- a/Website/css/index.css
+++ b/Website/css/index.css
@@ -1,11 +1,36 @@
-/**
- * Parallax Scrolling Tutorial
- * For NetTuts+
- *  
- * Author: Mohiuddin Parekh
- *	http://www.mohi.me
- * 	@mohiuddinparekh   
- */
+
+@font-face {
+	font-family: 'Coda-Heavy';
+	src: url('../fonts/Coda-Heavy/Coda-Heavy.eot');
+	src: url('../fonts/Coda-Heavy/Coda-Heavy.woff') format('woff'), url('../fonts/Coda-Heavy/Coda-Heavy.ttf') format('truetype'), url('../fonts/Coda-Heavy/Coda-Heavy.svg') format('svg');
+}
+@font-face {
+	font-family: 'Lato-Black';
+	src: url('../fonts/Lato-Black/Lato-Black.eot');
+	src: url('../fonts/Lato-Black/Lato-Black.woff') format('woff'), url('../fonts/Lato-Black/Lato-Black.ttf') format('truetype'), url('../fonts/Lato-Black/Lato-Black.svg') format('svg');
+}
+@font-face {
+	font-family: 'Lato-Light';
+	src: url('../fonts/Lato-Light/Lato-Light.eot');
+	src: url('../fonts/Lato-Light/Lato-Light.woff') format('woff'), url('../fonts/Lato-Light/Lato-Light.ttf') format('truetype'), url('../fonts/Lato-Light/Lato-Light.svg') format('svg');
+}
+@font-face {
+	font-family: 'PT_Sans-Web-Regular';
+	src: url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.eot');
+	src: url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.woff') format('woff'), url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.svg') format('svg');
+}
+@font-face {
+	font-family: 'PT_Sans-Web-Italic';
+	src: url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.eot');
+	src: url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.woff') format('woff'), url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.svg') format('svg');
+}
+@font-face {
+	font-family: 'PT_Sans-Web-Bold';
+	src: url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.eot');
+	src: url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.woff') format('woff'), url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 
 
 body{
@@ -33,11 +58,175 @@ body{
     box-shadow: 0 0 50px rgba(0,0,0,0.8);
 }
 
+#header {
+	background: url(../images/bg-header.jpg) no-repeat top center;
+	margin: 0;
+	height: 150px;
+    top: 0px;
+}
+#header div {
+	margin: 0 auto;
+	padding: 0;
+	width: 960px;
+}
+#header div:first-child {
+	padding: 0 0 0;
+    height: 98px;
+	overflow: hidden;
+}
+#header div a.logo {
+	display: block;
+	float: left;
+	margin: 0;
+	padding: 0;
+}
+#header div a.logo img {
+	border: 0;
+	display: block;
+	height: 50px;
+	padding-left: 100px;
+}
+#header div form {
+	float: right;
+	margin: 34px 10px 0 0;
+	overflow: hidden;
+	padding: 0;
+}
+#header div form input {
+	background: url(../images/interface.png) no-repeat;
+	border: 0;
+	display: block;
+	float: left;
+	height: 24px;
+	margin: 0;
+	padding: 0;
+}
+#header div form #search {
+	background-position: -228px -411px;
+	line-height: 24px;
+	padding: 0 0 0 10px;
+	width: 208px;
+}
+#header div form #searchBtn {
+	background-position: -446px -411px;
+	cursor: pointer;
+	width: 43px;
+}
+#header div form #searchBtn:hover {
+	background-position: -492px -411px;
+}
+#header .navigation {
+	background: url(../images/bg-navigation-right.gif) no-repeat bottom right;
+	width: 960px;
+}
+#header .navigation > ul:before, #header .navigation > ul:after {
+	content: "";
+	display: table;
+}
+#header .navigation > ul:after {
+	clear: both;
+}
+#header .navigation > ul {
+	background: url(../images/bg-navigation.png) repeat-x bottom left;
+	margin: 0;
+	padding: 0;
+}
+#header .navigation > ul > li {
+	display: block;
+	float: left;
+	list-style: none;
+	margin: 0 27px;
+	position: relative;
+	padding: 0;
+}
+#header .navigation > ul > li > a {
+	color: #fff;
+	display: block;
+	font-family: 'Lato-Light';
+	font-size: 14px;
+	font-weight: normal;
+	height: 52px;
+	line-height: 56px;
+	margin: 0;
+	padding: 0 15px;
+	text-align: center;
+	text-transform: uppercase;
+	text-decoration: none;
+}
+#header .navigation > ul > li.selected > a {
+	font-family: 'Lato-Black';
+}
+#header .navigation > ul > li > a:hover {
+	color: #e2e2e2;
+}
+#header .navigation > ul > li.booking > a {
+	color: #fcac00;
+	font-family: 'Lato-Black';
+}
+#header .navigation > ul > li.booking > a:hover {
+	color: #f3be4b;
+}
+#header .navigation ul ul {
+	left: -99999px;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	top: 52px;
+	z-index: 5;
+}
+#header .navigation > ul > li:hover ul {
+	left: 0;
+}
+#header .navigation ul ul li {
+	border-top: 1px solid #fff;
+	display: block;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	width: 180px;
+}
+#header .navigation ul ul li:first-child {
+	border: 0;
+}
+#header .navigation ul ul li a {
+	background: #fcac00;
+	color: #fff;
+	display: block;
+	height: 23px;
+	font-family: 'Lato-Light';
+	font-size: 13px;
+	font-weight: normal;
+	line-height: 23px;
+	margin: 0;
+	padding: 0 23px;
+	text-decoration: none;
+	text-transform: capitalize;
+}
+#header .navigation ul ul li a:hover {
+	background: 	#e9e9e9;
+	color: #7a7a7a;
+}
+
+
 /* Introduction */
 
-#home article { background: url("../images/intro.png") no-repeat scroll center top transparent; height: 458px; position: absolute; text-indent: -9999px; top: 291px; width: 100%; }
+#home article { 
+    background: url("../images/intro.png") no-repeat scroll center top transparent; 
+    height: 458px; 
+    position: absolute; 
+    text-indent: -9999px; 
+    top: 291px; 
+    width: 100%; 
+}
 
-#about article { background: url("../images/parallax.png") no-repeat scroll center top transparent; height: 458px; position: absolute; text-indent: -9999px; top: 291px; width: 100%; }
+#about article { 
+    background: url("../images/parallax.png") no-repeat scroll center top transparent; 
+    height: 458px; 
+    position: absolute; 
+    text-indent: -9999px; 
+    top: 291px; 
+    width: 100%; 
+}
 
 
 
