--- a/Website/css/index.css
+++ b/Website/css/index.css
@@ -1,36 +1,4 @@
 
-@font-face {
-	font-family: 'Coda-Heavy';
-	src: url('../fonts/Coda-Heavy/Coda-Heavy.eot');
-	src: url('../fonts/Coda-Heavy/Coda-Heavy.woff') format('woff'), url('../fonts/Coda-Heavy/Coda-Heavy.ttf') format('truetype'), url('../fonts/Coda-Heavy/Coda-Heavy.svg') format('svg');
-}
-@font-face {
-	font-family: 'Lato-Black';
-	src: url('../fonts/Lato-Black/Lato-Black.eot');
-	src: url('../fonts/Lato-Black/Lato-Black.woff') format('woff'), url('../fonts/Lato-Black/Lato-Black.ttf') format('truetype'), url('../fonts/Lato-Black/Lato-Black.svg') format('svg');
-}
-@font-face {
-	font-family: 'Lato-Light';
-	src: url('../fonts/Lato-Light/Lato-Light.eot');
-	src: url('../fonts/Lato-Light/Lato-Light.woff') format('woff'), url('../fonts/Lato-Light/Lato-Light.ttf') format('truetype'), url('../fonts/Lato-Light/Lato-Light.svg') format('svg');
-}
-@font-face {
-	font-family: 'PT_Sans-Web-Regular';
-	src: url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.eot');
-	src: url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.woff') format('woff'), url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.svg') format('svg');
-}
-@font-face {
-	font-family: 'PT_Sans-Web-Italic';
-	src: url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.eot');
-	src: url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.woff') format('woff'), url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.svg') format('svg');
-}
-@font-face {
-	font-family: 'PT_Sans-Web-Bold';
-	src: url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.eot');
-	src: url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.woff') format('woff'), url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
 
 
 body{
@@ -60,7 +28,13 @@ body{
 
 #header {
 	background: url(../images/bg-header.jpg) no-repeat top center;
-	margin: 0;
+    // From here
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+	position: fixed;
+    // To here, I'm unsure how reliable this is
 	height: 150px;
     top: 0px;
 }
@@ -71,7 +45,7 @@ body{
 }
 #header div:first-child {
 	padding: 0 0 0;
-    height: 98px;
+    height: 150px;
 	overflow: hidden;
 }
 #header div a.logo {
@@ -228,6 +202,39 @@ body{
     width: 100%; 
 }
 
+
+@font-face {
+	font-family: 'Coda-Heavy';
+	src: url('../fonts/Coda-Heavy/Coda-Heavy.eot');
+	src: url('../fonts/Coda-Heavy/Coda-Heavy.woff') format('woff'), url('../fonts/Coda-Heavy/Coda-Heavy.ttf') format('truetype'), url('../fonts/Coda-Heavy/Coda-Heavy.svg') format('svg');
+}
+@font-face {
+	font-family: 'Lato-Black';
+	src: url('../fonts/Lato-Black/Lato-Black.eot');
+	src: url('../fonts/Lato-Black/Lato-Black.woff') format('woff'), url('../fonts/Lato-Black/Lato-Black.ttf') format('truetype'), url('../fonts/Lato-Black/Lato-Black.svg') format('svg');
+}
+@font-face {
+	font-family: 'Lato-Light';
+	src: url('../fonts/Lato-Light/Lato-Light.eot');
+	src: url('../fonts/Lato-Light/Lato-Light.woff') format('woff'), url('../fonts/Lato-Light/Lato-Light.ttf') format('truetype'), url('../fonts/Lato-Light/Lato-Light.svg') format('svg');
+}
+@font-face {
+	font-family: 'PT_Sans-Web-Regular';
+	src: url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.eot');
+	src: url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.woff') format('woff'), url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.svg') format('svg');
+}
+@font-face {
+	font-family: 'PT_Sans-Web-Italic';
+	src: url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.eot');
+	src: url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.woff') format('woff'), url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.svg') format('svg');
+}
+@font-face {
+	font-family: 'PT_Sans-Web-Bold';
+	src: url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.eot');
+	src: url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.woff') format('woff'), url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 
 
 
