--- a/Website/css/index.css
+++ b/Website/css/index.css
@@ -46,6 +46,7 @@ body{
 #header div:first-child {
 	padding: 0 0 0;
     height: 150px;
+	width: 100%;
 	overflow: hidden;
 }
 #header div a.logo {
@@ -91,7 +92,8 @@ body{
 }
 #header .navigation {
 	background: url(../images/bg-navigation-right.gif) no-repeat bottom right;
-	width: 960px;
+	width: 100%;
+	margin-left:0px;
 }
 #header .navigation > ul:before, #header .navigation > ul:after {
 	content: "";
@@ -103,6 +105,8 @@ body{
 #header .navigation > ul {
 	background: url(../images/bg-navigation.png) repeat-x bottom left;
 	margin: 0;
+	margin-left: 0px;
+	margin-right: auto;
 	padding: 0;
 }
 #header .navigation > ul > li {
@@ -235,6 +239,5 @@ body{
 	font-weight: normal;
 	font-style: normal;
 }
-
 
 
