--- a/Website/css/index.css
+++ b/Website/css/index.css
@@ -38,7 +38,7 @@ body {
 }
 #header div form {
 	float: right;
-	margin: 34px 10px 0 0;
+	margin: 15px 10px 0 0;
 	overflow: hidden;
 	padding: 0;
 }
@@ -67,9 +67,10 @@ body {
 }
 #header .navigation {
 	/*background: url(../images/bg-navigation-right.gif) no-repeat bottom right;*/
-	width: 960px;
+	width: 95%;
 	margin: 0 auto;
-    top: -53px;
+    text-align: center;
+    top: -52px;
     position: relative;
 }
 #header .navigation_bg {
@@ -86,16 +87,30 @@ body {
 }
 #header .navigation > ul {
 	/*background: url(../images/bg-navigation.png) repeat-x bottom left;*/
-	margin: 0;
-	margin-left: 0px;
-	margin-right: auto;
-	padding: 0;
+	margin: auto;
+    width: 98%;
+    height: 52px;
+    /*text-align: center;
+	padding: 0;*/
 }
+/*#header .navigation > ul > li:first-child {
+    margin-left: 8%;
+}*/
+/*#nav_list { 
+    text-align: center; 
+}
+#nav_list li {
+    list-style: none; 
+    display: inline-block; 
+}*/
 #header .navigation > ul > li {
-	display: block;
-	float: left;
-	list-style: none;
-	margin: 0 27px;
+    list-style: none; 
+    display: inline-block;
+	/*list-style: none;*/
+    /*display: inline;*/
+	/*display: block;*/
+	/*float: left;*/
+	margin: 0 12px;
 	position: relative;
 	padding: 0;
 }
@@ -106,7 +121,7 @@ body {
 	font-size: 14px;
 	font-weight: normal;
 	height: 52px;
-	line-height: 56px;
+	line-height: 52px;
 	margin: 0;
 	padding: 0 15px;
 	text-align: center;
@@ -155,7 +170,7 @@ body {
 	height: 23px;
 	font-family: 'Lato-Light';
 	font-size: 13px;
-	font-weight: normal;
+	font-weight: bold;
 	line-height: 23px;
 	margin: 0;
 	padding: 0 23px;
@@ -173,17 +188,27 @@ body {
 @font-face {
 	font-family: 'Coda-Heavy';
 	src: url('../fonts/Coda-Heavy/Coda-Heavy.eot');
-	src: url('../fonts/Coda-Heavy/Coda-Heavy.woff') format('woff'), url('../fonts/Coda-Heavy/Coda-Heavy.ttf') format('truetype'), url('../fonts/Coda-Heavy/Coda-Heavy.svg') format('svg');
+	src: url('../fonts/Coda-Heavy/Coda-Heavy.woff') format('woff'), 
+	url('../fonts/Coda-Heavy/Coda-Heavy.ttf') format('truetype'), 
+	url('../fonts/Coda-Heavy/Coda-Heavy.svg') format('svg');
 }
 @font-face {
 	font-family: 'Lato-Black';
 	src: url('../fonts/Lato-Black/Lato-Black.eot');
-	src: url('../fonts/Lato-Black/Lato-Black.woff') format('woff'), url('../fonts/Lato-Black/Lato-Black.ttf') format('truetype'), url('../fonts/Lato-Black/Lato-Black.svg') format('svg');
+	src: url('../fonts/Lato-Black/Lato-Black.woff') format('woff'), 
+	url('../fonts/Lato-Black/Lato-Black.ttf') format('truetype'), 
+	url('../fonts/Lato-Black/Lato-Black.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
 	font-family: 'Lato-Light';
 	src: url('../fonts/Lato-Light/Lato-Light.eot');
-	src: url('../fonts/Lato-Light/Lato-Light.woff') format('woff'), url('../fonts/Lato-Light/Lato-Light.ttf') format('truetype'), url('../fonts/Lato-Light/Lato-Light.svg') format('svg');
+	src: url('../fonts/Lato-Light/Lato-Light.woff') format('woff'), 
+	url('../fonts/Lato-Light/Lato-Light.ttf') format('truetype'), 
+	url('../fonts/Lato-Light/Lato-Light.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 @font-face {
 	font-family: 'PT_Sans-Web-Regular';
