--- a/Website/login/css/login.css
+++ b/Website/login/css/login.css
@@ -7,7 +7,7 @@ body {
     position: relative;
 }
 #header {
-	background: url(../images/bg-header.jpg) no-repeat top center;
+	background: url(../../images/bg-header.jpg) no-repeat top center;
  // From here  margin-left: auto;
 	margin-right: auto;
 	left: 0;
@@ -48,7 +48,7 @@ body {
 	padding: 0;
 }
 #header div form input {
-	background: url(../images/interface.png) no-repeat;
+	background: url(../../images/interface.png) no-repeat;
 	border: 0;
 	display: block;
 	float: left;
@@ -79,7 +79,7 @@ body {
     position: relative;
 }
 #header .navigation_bg {
-    background: url(../images/bg-navigation.png) repeat-x bottom left;
+    background: url(../../images/bg-navigation.png) repeat-x bottom left;
 	width: 100%;
     height: 50px;
 }
@@ -192,43 +192,49 @@ body {
 
 @font-face {
 	font-family: 'Coda-Heavy';
-	src: url('../fonts/Coda-Heavy/Coda-Heavy.eot');
-	src: url('../fonts/Coda-Heavy/Coda-Heavy.woff') format('woff'), 
-	url('../fonts/Coda-Heavy/Coda-Heavy.ttf') format('truetype'), 
-	url('../fonts/Coda-Heavy/Coda-Heavy.svg') format('svg');
+	src: url('../../fonts/Coda-Heavy/Coda-Heavy.eot');
+	src: url('../../fonts/Coda-Heavy/Coda-Heavy.woff') format('woff'), 
+	url('../../fonts/Coda-Heavy/Coda-Heavy.ttf') format('truetype'), 
+	url('../../fonts/Coda-Heavy/Coda-Heavy.svg') format('svg');
 }
 @font-face {
 	font-family: 'Lato-Black';
-	src: url('../fonts/Lato-Black/Lato-Black.eot');
-	src: url('../fonts/Lato-Black/Lato-Black.woff') format('woff'), 
-	url('../fonts/Lato-Black/Lato-Black.ttf') format('truetype'), 
-	url('../fonts/Lato-Black/Lato-Black.svg') format('svg');
+	src: url('../../fonts/Lato-Black/Lato-Black.eot');
+	src: url('../../fonts/Lato-Black/Lato-Black.woff') format('woff'), 
+	url('../../fonts/Lato-Black/Lato-Black.ttf') format('truetype'), 
+	url('../../fonts/Lato-Black/Lato-Black.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'Lato-Light';
-	src: url('../fonts/Lato-Light/Lato-Light.eot');
-	src: url('../fonts/Lato-Light/Lato-Light.woff') format('woff'), 
-	url('../fonts/Lato-Light/Lato-Light.ttf') format('truetype'), 
-	url('../fonts/Lato-Light/Lato-Light.svg') format('svg');
+	src: url('../../fonts/Lato-Light/Lato-Light.eot');
+	src: url('../../fonts/Lato-Light/Lato-Light.woff') format('woff'), 
+	url('../../fonts/Lato-Light/Lato-Light.ttf') format('truetype'), 
+	url('../../fonts/Lato-Light/Lato-Light.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
 @font-face {
 	font-family: 'PT_Sans-Web-Regular';
-	src: url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.eot');
-	src: url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.woff') format('woff'), url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.svg') format('svg');
+	src: url('../../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.eot');
+	src: url('../../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.woff') format('woff'), 
+	url('../../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.ttf') format('truetype'), 
+	url('../../fonts/PT_Sans-Web-Regular/PT_Sans-Web-Regular.svg') format('svg');
 }
 @font-face {
 	font-family: 'PT_Sans-Web-Italic';
-	src: url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.eot');
-	src: url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.woff') format('woff'), url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.svg') format('svg');
+	src: url('../../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.eot');
+	src: url('../../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.woff') format('woff'), 
+	url('../../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.ttf') format('truetype'), 
+	url('../../fonts/PT_Sans-Web-Italic/PT_Sans-Web-Italic.svg') format('svg');
 }
 @font-face {
 	font-family: 'PT_Sans-Web-Bold';
-	src: url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.eot');
-	src: url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.woff') format('woff'), url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.ttf') format('truetype'), url('../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.svg') format('svg');
+	src: url('../../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.eot');
+	src: url('../../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.woff') format('woff'), 
+	url('../../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.ttf') format('truetype'), 
+	url('../../fonts/PT_Sans-Web-Bold/PT_Sans-Web-Bold.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
